--- a/Storytelling.ipynb
+++ b/Storytelling.ipynb
@@ -1,89 +1,90 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69072795-bab1-455c-95cc-ec5b8f24c7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STORYTELLING"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "3e5b6cc6-344a-4bc0-8d6b-8b0c849566b4",
+   "id": "fa5139b5-ebd1-411b-89b9-da23076721e1",
    "metadata": {},
    "source": [
-    "### Motivación del proyecto\n",
+    "Motivación del proyecto\n",
     "\n",
-    "Se ha escogido la música como tema principal del proyecto.  Esto con el objetivo de entender mejor cómo se comportan las canciones más populares en distintas listas alrededor del mundo. Se han escogido 4 listas, las más importantes a nuestro parecer: Billboard Hot 100, Los 40 Principales, UK Top 100, Shazam Top 200. \n",
+    "Se ha escogido la música como tema principal del proyecto. Esto con el objetivo de entender mejor cómo se comportan las canciones más populares en distintas listas alrededor del mundo. Se han escogido 4 listas, las más importantes a nuestro parecer: Billboard Hot 100, Los 40 Principales, UK Top 100, Shazam Top 200.\n",
     "\n",
-    "### Alcance del Proyecto\n",
+    "\n",
+    "Alcance del Proyecto\n",
     "Realizar un proceso ETL completo sobre información musical:\n",
     "\n",
-    "•\tExtracción: \n",
+    "• Extracción:\n",
     "\n",
     "Se buscó documentación en la web acerca de la extracción de la API de Spofify (https://developer.spotify.com/documentation/web-api) y su repositorio (https://github.com/spotipy-dev/spotipy/blob/2.22.1/TUTORIAL.md). Se tuvo que buscar las claves de usuarios y peticiones de tokens para cargar toda la información en un json.\n",
     "\n",
     "Se definieron las columnas a extraer sobre las 4 playlists escogidas: \"track_name\", \"track_popularity\", \"duration_ms\", \"artist_name\", \"artist_genres\", \"artist_popularity\", \"feats\", \"explicit\", \"album\", \"type\", \"relase_date\", \"track_id\", \"artist_id\", \"list\". Todo se guardó en un DataFrame y se guardó en un archivo .CSV (\"top_charts.csv\").\n",
     "\n",
-    "•\tTransformación:\n",
+    "• Transformación:\n",
     "\n",
-    "Limpieza de nombres de canciones: se eliminaron partes como (feat. ...) o (with ...) de los nombres de canciones para estandarizar.\n",
-    "Separación de géneros: se dividió la columna artist_genres (que tenía géneros separados por \"|\") en listas de géneros individuales. \n",
-    "Se utilizó .explode() y se guardó en un nuevo DataFrame (df_exploded).\n",
+    "Limpieza de nombres de canciones: se eliminaron partes como (feat. ...) o (with ...) de los nombres de canciones para estandarizar. Separación de géneros: se dividió la columna artist_genres (que tenía géneros separados por \"|\") en listas de géneros individuales. Se utilizó .explode() y se guardó en un nuevo DataFrame (df_exploded).\n",
     "\n",
     "Conversión de fecha: se convirtió la columna relase_date (fecha de lanzamiento) a formato de fecha (datetime), considerando diferentes formatos posibles.\n",
     "\n",
-    "Transformación de texto: se pasaron los nombres de canciones (track_name) a minúsculas para evitar duplicados.\n",
-    "Todo se guardó en un DataFrame y se guardó en un archivo .CSV (\"df_trans.csv \"). \n",
+    "Transformación de texto: se pasaron los nombres de canciones (track_name) a minúsculas para evitar duplicados. Todo se guardó en un DataFrame y se guardó en un archivo .CSV (\"df_trans.csv \").\n",
     "\n",
-    "•\tCarga: No aplica.\n",
+    "• Carga: No aplica.\n",
     "\n",
-    "•\tVisualización: análisis de información a través de gráficos.\n",
+    "• Visualización: análisis de información a través de gráficos.\n",
     "\n",
-    "### Herramientas Usadas\n",
-    "- Lenguaje: Python\n",
-    "- Librerías principales:\n",
-    "  requests, os, dotenv: para extracción vía API,\n",
-    "  pandas, numpy, json,\n",
-    "  matplotlib, seaborn,\n",
-    "  Spotify API: fuente de datos\n",
+    "Herramientas Usadas\n",
+    "Lenguaje: Python\n",
+    "Librerías principales: requests, os, dotenv: para extracción vía API, pandas, numpy, json, matplotlib, seaborn, Spotify API: fuente de datos\n",
+    "Desafíos\n",
+    "Etapas: Extracción\n",
     "\n",
-    "### Desafíos\n",
-    "\n",
-    "Etapas:\n",
-    "Extracción\n",
-    "- Credenciales-tokens: Una de las principales dificultades al lidiar con la API de Spotify fue el manejo de las credenciales de acceso necesarias para autorizar las solicitudes a la plataforma. Spotify requiere un ID de cliente y un secreto de cliente, que se obtienen al registrar una aplicación en el Panel de desarrollador de Spotify. Para gestionar esto, se utilizó un archivo .env, un enfoque estándar para mantener las variables de entorno locales y seguras. Esto hace que las variables sean accesibles al código a través de una biblioteca como dotenv, e implica asegurarse de que el archivo .env se coloque en la raíz del proyecto y se cargue antes de intentar utilizar las variables.\n",
-    "\n",
+    "Credenciales-tokens: Una de las principales dificultades al lidiar con la API de Spotify fue el manejo de las credenciales de acceso necesarias para autorizar las solicitudes a la plataforma. Spotify requiere un ID de cliente y un secreto de cliente, que se obtienen al registrar una aplicación en el Panel de desarrollador de Spotify. Para gestionar esto, se utilizó un archivo .env, un enfoque estándar para mantener las variables de entorno locales y seguras. Esto hace que las variables sean accesibles al código a través de una biblioteca como dotenv, e implica asegurarse de que el archivo .env se coloque en la raíz del proyecto y se cargue antes de intentar utilizar las variables.\n",
     "Transformación\n",
     "\n",
-    "- Uso .explode(): se aplicó sobre la columna 'artist_genres' ya que si no se usaba .explode(), todos los géneros estaban juntos en una celda como string, lo que hacía imposible analizarlos correctamente.\n",
-    "- Jupyter vs visual studio:\n",
+    "Uso .explode(): se aplicó sobre la columna 'artist_genres' ya que si no se usaba .explode(), todos los géneros estaban juntos en una celda como string, lo que hacía imposible analizarlos correctamente.\n",
     "\n",
     "Visualización\n",
     "\n",
-    "- Uso subset: se aplican subsets del dataframe original con cada una de las listas por separado para filtrar. Con esto se puede hacer una mejor visualización de los datos para obtener información más precisa por país. \n",
-    "- Canción APT. más repetida entre listas. Si bien trabajamos con 4 listas, esta canción aparece 5 veces debido a que en la lista de Shazam se repite 2 veces. Esto es debido a que la misma canción tiene dos diferentes “track_id”.\n",
-    "- Escoger el objetivo que se quería mostrar y el gráfico adecuado para mostrarlo. Por ejemplo, para representar de mejor manera la duración de canciones se optó por un violinplot porque muestra tanto la mediana como la distribución. \n",
-    "- Versiones de paquetes diferentes generaban distintas visualizaciones. Algunas funciones como sns.histplot() o sns.jointplot() se comportaban distinto dependiendo de la versión instalada.\n",
-    " \n",
-    "### Esquema del Proyecto\n",
-    "\n",
-    "1. Carga de credenciales desde .env\n",
-    "2. Extracción de datos con funciones API (token, playlist, artista, canciones)\n",
-    "3. Almacenamiento de datos en DataFrame\n",
-    "4. Limpieza y transformación:\n",
-    "   - Normalización de texto\n",
-    "   - Extracción de feats\n",
-    "   - División de géneros\n",
-    "   - Conversión de fechas\n",
-    "5. Exportación a CSV\n",
-    "6. Visualización y análisis\n",
+    "Uso subset: se aplican subsets del dataframe original con cada una de las listas por separado para filtrar. Con esto se puede hacer una mejor visualización de los datos para obtener información más precisa por país.\n",
+    "Canción APT. más repetida entre listas. Si bien trabajamos con 4 listas, esta canción aparece 5 veces debido a que en la lista de Shazam se repite 2 veces. Esto es debido a que la misma canción tiene dos diferentes “track_id”.\n",
+    "Escoger el objetivo que se quería mostrar y el gráfico adecuado para mostrarlo. Por ejemplo, para representar de mejor manera la duración de canciones se optó por un violinplot porque muestra tanto la mediana como la distribución.\n",
+    "Versiones de paquetes diferentes generaban distintas visualizaciones. Algunas funciones como sns.histplot() o sns.jointplot() se comportaban distinto dependiendo de la versión instalada.\n",
     "\n",
     "\n",
-    "### Visualizaciones y Resultados\n",
+    "Esquema del Proyecto\n",
+    "\n",
+    "Carga de credenciales desde .env\n",
+    "Extracción de datos con funciones API (token, playlist, artista, canciones)\n",
+    "Almacenamiento de datos en DataFrame\n",
+    "Limpieza y transformación:\n",
+    "Normalización de texto\n",
+    "Extracción de feats\n",
+    "División de géneros\n",
+    "Conversión de fechas\n",
+    "Exportación a CSV\n",
+    "Visualización y análisis\n",
+    "\n",
+    "\n",
+    "Visualizaciones y Resultados\n",
     "\n",
     "Datos dados: La popularidad del artista es un dato entregado por Spotify que no depende de la lista.\n",
     "\n",
-    "Gráfico 1 \"Canciones por lista\" (plot.pie): muestra el porcentaje de canciones que aporta cada lista (e.g., Billboard, UK Top 100, Shazam 200, 40 Principales) al dataset total. \n",
+    "Gráfico 1 \"Canciones por lista\" (plot.pie): muestra el porcentaje de canciones que aporta cada lista (e.g., Billboard, UK Top 100, Shazam 200, 40 Principales) al dataset total.\n",
     "\n",
     "Gráfico 2 \"Artistas más populares\" (sns.barplot): muestra los 10 artistas con mayor popularidad en el dataset, basada en la métrica artist_popularity entregada por la API. Los tres primeros son Bad Bunny, Drake y The Weekend.\n",
     "\n",
-    "Gráfico 3 \"Canciones más popular en cada lista\" (sns.barplot): muestra las canciones de más populares por lista. La canción más popular de todas es “ordinary” de Alex Warren con una popularidad de 69 de la lista Billboard. La menos popular es “dior” de MK con una popularidad de 85 de la list\ta UK Top 100.\n",
+    "Gráfico 3 \"Canciones más popular en cada lista\" (sns.barplot): muestra las canciones de más populares por lista. La canción más popular de todas es “ordinary” de Alex Warren con una popularidad de 69 de la lista Billboard. La menos popular es “dior” de MK con una popularidad de 85 de la list a UK Top 100.\n",
     "\n",
-    "Gráfico 4 \"Popularidad de Artista vs Canción\" (sns.joinplot):  muestra la dispersión entre la popularidad del artista vs la popularidad de la canción. Hay una correlación positiva clara entre la popularidad del artista y la popularidad de las canciones. Los puntos forman una tendencia diagonal ascendente, indicando que artistas más populares tienden a tener canciones más populares. La mayoría de los datos se concentran en la zona de 50-100 de popularidad del artista y 60-100 de popularidad de la canción, formando un cluster principal. Los artistas más populares con canciones más populares corresponden a las listas Billboard y UK Top 100, en verde y naranja respetivamente, mientras que la lista de los 40 principales y Shazam están más repartidas.\n",
+    "Gráfico 4 \"Popularidad de Artista vs Canción\" (sns.joinplot): muestra la dispersión entre la popularidad del artista vs la popularidad de la canción. Hay una correlación positiva clara entre la popularidad del artista y la popularidad de las canciones. Los puntos forman una tendencia diagonal ascendente, indicando que artistas más populares tienden a tener canciones más populares. La mayoría de los datos se concentran en la zona de 50-100 de popularidad del artista y 60-100 de popularidad de la canción, formando un cluster principal. Los artistas más populares con canciones más populares corresponden a las listas Billboard y UK Top 100, en verde y naranja respetivamente, mientras que la lista de los 40 principales y Shazam están más repartidas.\n",
     "\n",
     "Gráfico 5 \"Popularidad de Canción por lista\" (sns.boxplot): muestra la popularidad de canción por lista donde UK top100 y Billboard son las más populares. La mediana de UK top 100 es la más alta. También se puede observar outliers muy alejados de la media de los datos en las listas de UK top 100 y Shazam.\n",
     "\n",
@@ -103,25 +104,15 @@
     "\n",
     "Gráfico 13 “Artistas más repetidos teniendo en cuenta los feats” (sns.countplot): muestra el artista que más veces aparece es Morgan Wallen con 15 apariciones.\n",
     "\n",
-    "Gráfico 14 “Artistas más repetidos teniendo en cuenta los feats por país” (plt.subplot): se puede ver que hay una distribución con cola en Billboard, Shazam y los 40 principales. El artista más repetido en la gráfica 13, Morgan Wallen con 15, pero solo aparece en Billboard. En UK top 100, los artistas más representados se repiten 3 veces. En los otros dos hay un claro artista dominante: Elena Vargas en los 40 principales y Greecia en Shazam con 8 apariciones. En los 40 principales hay una gran representación de artistas latinos, mientras que en los otros hay solo de habla inglesa.\n",
-    "\n",
-    "\n"
+    "Gráfico 14 “Artistas más repetidos teniendo en cuenta los feats por país” (plt.subplot): se puede ver que hay una distribución con cola en Billboard, Shazam y los 40 principales. El artista más repetido en la gráfica 13, Morgan Wallen con 15, pero solo aparece en Billboard. En UK top 100, los artistas más representados se repiten 3 veces. En los otros dos hay un claro artista dominante: Elena Vargas en los 40 principales y Greecia en Shazam con 8 apariciones. En los 40 principales hay una gran representación de artistas latinos, mientras que en los otros hay solo de habla inglesa."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ec2c9c4-5d5a-4a50-8b64-59f2103874df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -133,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
